Segundo commit de actualización con vista de instructores y se creo archivo registrame

--- a/views/registrarse.html
+++ b/views/registrarse.html
@@ -16,7 +16,7 @@
       crossorigin="anonymous"
     />
 
-    <title>Cursos</title>
+    <title>Registro</title>
   </head>
 
   <body>
@@ -81,55 +81,6 @@
     </nav>
 <br>
     <div class="container">
-
-      <div class="row">
-
-        <div class="col-12 col-sm-6 col-md-4 col-lg-3">
-            <div class="card">
-                <img style="width: 200px;" src="img/cerebro.jpg" class="card-img-top mx-auto d-block">
-                <div class="card-body">
-                  <h5 class="card-title">Creatividad y Diseño</h5>
-                  <p class="card-text">Vuela tu imaginación para crear obreas de arte</p>
-                  <a href="views/registrarse.html" class="btn btn-primary">Inscribirse</a>
-                </div>
-              </div>
-        </div>
-
-        <div class="col-12 col-sm-6 col-md-4 col-lg-3">
-            <div class="card">
-                <img style="width: 200px;" src="img/Database-System_0.jpg" class="card-img-top mx-auto d-block">
-                <div class="card-body">
-                  <h5 class="card-title">Database System</h5>
-                  <p class="card-text">Administra sistemas de base de datos como un pro</p>
-                  <a href="/aweb.129.cursos/views/registrarse.html" class="btn btn-primary">Inscribirse</a>
-                </div>
-              </div>
-        </div>
-
-        <div class="col-12 col-sm-6 col-md-4 col-lg-3">
-            <div class="card">
-                <img style="width: 200px;" src="img/IA_0.jpg" class="card-img-top mx-auto d-block">
-                <div class="card-body">
-                  <h5 class="card-title">Inteligencia Artificial</h5>
-                  <p class="card-text">Sumérgete en el mundo de la Inteligencia Artificial</p>
-                  <a href="/aweb.129.cursos/views/registrarse.html" class="btn btn-primary">Inscribirse</a>
-                </div>
-              </div>
-        </div>
-
-        <div class="col-12 col-sm-6 col-md-4 col-lg-3">
-            <div class="card">
-                <img style="width: 200px;" src="img/Android_0.jpg" class="card-img-top mx-auto d-block">
-                <div class="card-body">
-                  <h5 class="card-title">Aplicaciones móviles con Android</h5>
-                  <p class="card-text">Construye y Desarrolla al maximo tus habilidades para desarrollar aplicaciones móviles</p>
-                  <a href="/aweb.129.cursos/views/registrarse.html" class="btn btn-primary">Inscribirse</a>
-                </div>
-              </div>
-        </div>
-
-
-      </div>
 
     </div>
 
