--- a/views/registrarse.html
+++ b/views/registrarse.html
@@ -40,7 +40,9 @@
             <a class="nav-link" href="#">Inicio </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/aweb.129.cursos/views/instructores.html">Instructores</a>
+            <a class="nav-link" href="/aweb.129.cursos/views/instructores.html"
+              >Instructores</a
+            >
           </li>
           <li class="nav-item dropdown">
             <a
@@ -79,7 +81,7 @@
           -->
       </div>
     </nav>
-<br>
+    <br />
     <div class="container">
       <div class="row bg-muted">
         <div class="col-6 offset-3">
@@ -89,72 +91,107 @@
 
             <!--"Action" se pone la ruta del servidor web-->
             <form action="" method="POST">
-              <ul style="list-style: none;">
-                  <li>
-                    <label for="nombre">Nombre: </label>
-                    <input type="text" name="nombre" id="nombre">
+              <div class="form-group">
+                <label for="nombre">Nombre</label>
+                <input class="form-control"
+                  type="text"
+                  name="nombre"
+                  id="nombre"
+                />
+              </div>
 
-                  </li>
+              <div class="form-group">
+                <label for="primerApellido">Primer apellido</label>
+                <input
+                  class="form-control"
+                  type="text"
+                  name="primerApelido"
+                  id="primerApelido"
+                />
+              </div>
 
-                  <li>
-                    <label for="primerApellido">Primer apellido</label>
-                    <input type="text" name="primerApelido" id="primerApelido">
-                  </li>
+              <div class="form-group">
+                <label for="segundoApellido">Segundo Apellido</label>
+                <input
+                  class="form-control"
+                  type="text"
+                  name="segundoApelido"
+                  id="segundoApelido"
+                />
+              </div>
 
-                  <li>
-                    <label for="segundoApellido">Segundo Apellido</label>
-                    <input type="text" name="segundoApelido" id="segundoApelido">
-                  </li>
+              <div class="form-group">
+                <label for="#">Tipo de Modalidad</label>
+                <div class="form-check" >
+                    <input  class="form-check-input" type="checkbox" id="presencial" value="preesencial" name="modalidad">
+                    <label class="form-check-label" for="presencial">Presencial</label>
+                </div>
 
-                  <li>
-                    <input type="checkbox" id="presencial" value="Presencial">
-                    <label for="presencial">Presencial:</label>
 
-                    <input type="checkbox" id="remoto" value="Remoto">
-                    <label for="remoto">Remoto:</label>
+              <div class="form-check" >
+                <input class="form-check-input" type="checkbox" name="modalidad" id="remoto" value="Remoto">
+                <label class="form-check-label" for="remoto">Remoto</label>
+              </div>
 
-                    <input type="checkbox" id="mixto" value="Mixto">
-                    <label for="remoto">Mixto:</label>
+              <div class="form-check" >
+                <input class="form-check-input" type="checkbox" id="mixto" value="Mixto" name="modalidad">
+                <label class="form-check-label" for="mixto">Mixto</label>
 
-                  </li>
+              </div>
+            </div>
 
-                  <li>
-                    <input type="radio" name="sexo" id="hombre" value="hombre">
-                    <label for="hombre">Hombre</label>
+            <div class="form-group">
+              <label class="form-check-label" for="#">Sexo: </label>
 
-                    <input type="radio" name="sexo" id="mujer" value="mujer">
-                    <label for="mujer">Mujer</label>
-                    
-                  </li>
+              <div class="form radius">
+                <input class="form-check-radius" type="radio" name="sexo" id="mujer "value="mujer">
+                <label class="form-check-label" for="mujer">Mujer</label>
 
-                  <li>
-                    <label for="curso">Curso</label>
-                    <select name="curso" id="curso">
-                      <option value="0">Seleccione...</option>
-                      <option value="1">Creatividad y Diseño</option>
-                      <option value="2">Database System</option>
-                      <option value="3">Aplicaciones Móviles</option>
-                      <option value="4">Finanzas Corporativas</option>
-                    </select>
-                  </li>
+              </div>
 
-                  <li>
-                    <label for="observaciones">Obervaciones:</label><br>
-                    <textarea style="resize: none;" name="observaciones" id="observaciones" cols="30" rows="10">
-                      Lorem ipsum dolor sit amet consectetur, adipisicing elit. Placeat expedita velit impedit pariatur animi laudantium. Dolore dolorem adipisci enim earum asperiores. Error architecto maxime earum blanditiis voluptate, perferendis neque aspernatur.
-                    </textarea>
-                  </li>
+              <div class="form radius">
+                <input class="form-check-radius" type="radio" name="sexo" id="hombre "value="hombre">
+                <label class="form-check-label" for="mujer">Hombre</label>
 
-                  <li>
-                    <input type="submit" value="Registrar" name="registrar" id="registrar">
-                    <input type="reset" value="Cancelar" name="reset" id="reset">
-                  </li>
-              </ul>
+              </div>
+
+            </div>
+
+            
+            <div class="form-group">
+                
+              <label class="form-check-label" for="curso">Curso: </label>
+
+              <div class="form-select">
+              <select name="curso" id="curso form-check-select">
+                <option value="0">Seleccione...</option>
+                <option value="1">Creatividad y diseño</option>
+                <option value="2">Database Systems</option>
+                <option value="3">Desarrollo móvil android</option>
+                <option value="4">Finanzas</option>
+              </select>
+            </div>
+
+            </div>
+            <div class="form-group">
+
+              <label for="curso">Observaciones: </label>
+              <br>
+              <div class="form-textarea">
+                <textarea style="resize: none; "name="observaciones" id="observaciones" cols="60" rows="10">
+                </textarea>
+              </div>
+            </div>
+
+            <div class="form-group">
+
+              <input class="form-check-button" type="submit" value="Registrar" name="registrar" id="registrar">
+              <input class="form-check-button" type="reset" value="Cancelar" name="reset" id="reset">
+
+            </div>
 
 
             </form>
-
-
           </fieldset>
         </div>
       </div>
